# mkdocs-latex-math

./: .gitignore  README.md  latex_math.py  pyproject.toml
